# ai-council

./: .env.example  .gitignore  AGENTS.md  ANALYSIS.md  API_KEYS_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODEBASE_ANALYSIS_DETAILED.md  COMPLETE_SUMMARY.md  CUSTOM_API_GUIDE.md  FAST_MODE.md  FINALNE_PODSUMOWANIE.md  GOTOWE.md  IMPROVEMENTS.md  INDEX.md  MAPA.md  NAPRAWIONE.md  OPTION_A_COMPLETE.md  PODSUMOWANIE.md  PROBLEM_WYDAJNOSCI.md  QUICKSTART.md  QUICK_START.md  README.md  README_FIRST.txt  START_TUTAJ.md  STATUS.md  SZYBKIE_ROZWIAZANIE.md  TEST_CUSTOM_PROVIDER.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CUSTOM_API.md  UV_COMPLETE.md  UV_MIGRATION.md  app.py  check_setup.py  debug_api_keys.txt  diagnoza.bat  main.py  pyproject.toml  requirements-uv.txt  (+14 more)
.claude/: settings.local.json
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: ci.yml
data/: brand_info.json
docs/: API_CONTRACTS_V1.md
examples/: integration_example.py
src/: __init__.py  custom_api_provider.py  llm_providers.py
src/agents/: agent_storage.py  base.py  core_agents.py  custom_agents.py  custom_validation.py  historical_agents.py  prompt_templates.py  specialist_agents.py  specialists.py
src/council/: __init__.py  debate.py  fast_mode.py  historical_council.py  modes.py  orchestrator.py  quality.py  quality_decision.py  routing.py
src/knowledge/: character_knowledge.py  errors.py  ingest.py  retriever.py
src/plugins/: __init__.py  stocks.py  url_analyzer.py  utilities.py  weather.py  web_search.py  wikipedia.py
src/seo/: __init__.py  ahrefs_importer.py  article_generator.py  article_storage.py  brand_info.py  competitor_analyzer.py  schema_generator.py  serp_analyzer.py
src/storage/: __init__.py  export.py  session_history.py  user_db.py
src/utils/: __init__.py  api_keys.py  cache.py  error_handler.py  health.py  logger.py  rate_limit.py  validation.py
static/: index.html
static/css/: styles.css
static/js/: api-keys.js  api-wrapper.js  app.js  error-recovery.js
tests/: conftest.py  quality_eval_baseline.json  quality_eval_dataset.json  quality_gate.py  test_core_api_contracts.py  test_council.py  test_council_mode_api.py  test_custom_provider_debug_behavior.py  test_custom_validation.py  test_deliberate_v2_api.py  test_historical_api.py  test_openrouter_catalog_cache.py  test_provider_factory.py  test_provider_validation_and_keys.py  test_quality_mode_decision.py  test_rate_limit_middleware.py  test_routing.py  test_stock_plugin.py  test_url_analyzer_plugin.py  test_utils.py  test_weather_plugin.py  test_wikipedia_plugin.py
